--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Assistent</title>
+  <title>My AI Assistent </title>
 </head>
 
 <body>
   <main>
-    <h1>My Assistent</h1>
+    <h1>My AI Assistent</h1>
     <form>
       <div class="prompt-box">
         <label>
